# codecheckerror

./: CMakeLists.txt  CodeCheckerWindow.cpp  CodeCheckerWindow.h  main.cpp  readme.md
